v0.3.0/news/index.md
# Changelog

## tblcheck 0.3.0

- Add
  [`tbl_equal()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_equal.md),
  which returns a `TRUE` or `FALSE` value indicating if two tables are
  equivalent, using the same process as
  [`tbl_check()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check.md).
- [`tbl_check()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check.md),
  [`tbl_grade()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check.md),
  [`tbl_check_column()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_column.md),
  [`tbl_grade_column()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_column.md)
  and
  [`vec_grade()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check.md)
  gain arguments to set whether they will check the levels of factors.
- [`vec_check()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check.md)
  and
  [`vec_grade()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check.md)
  now only check factor levels if both `object` and `expected` are
  factors. In most cases, this difference would be caught earlier by
  class checking. Previously, calling
  `vec_check(x, factor(x), check_class = FALSE)` would signal a problem
  because one vector has levels and the other does not.

## tblcheck 0.2.2

- Messages generated by
  [`tbl_grade_class()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_class.md)
  now internally call two generic S4 functions:
  - [`friendly_class()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/friendly_class.md)
    generates class names for single objects.
    - e.g. `friendly_class(character(1))` returns “a text string (class
      `character`)”.
  - [`hinted_class_message()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/hinted_class_message.md)
    generates messages when `object` and `expected` are both a specific
    class.
    - e.g. if `object` is an ungrouped tibble and `expected` is a
      grouped tibble,
      [`hinted_class_message()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/hinted_class_message.md)
      generates a message that suggests using `group_by()`.
  - Using generic functions allows
    [`tbl_grade_class()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_class.md)
    messages to be expanded by adding methods for new classes in
    tutorial setup code or external packages.

## tblcheck 0.2.1

- [`grade_this_table()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/grade_this_table.md)
  now sets `pass_if_equal = FALSE` by default
  ([\#128](https://github.com/rstudio/tblcheck/issues/128)).

## tblcheck 0.2.0

- Improve messages generated by
  [`tbl_grade_class()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_class.md):
  - Messages now only suggest using the functions `group_by()`,
    `ungroup()` and `rowwise()` if both `object` and `expected` are
    `data.frame`s
    ([\#119](https://github.com/rstudio/tblcheck/issues/119)).
  - Messages now describe non-atomic variables with length \> 1 as
    “objects”, not “vectors”
    ([\#122](https://github.com/rstudio/tblcheck/issues/122)).
- [`problem()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/problem.md)
  and
  [`problem_message()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/problem_message.md)
  are now exported functions. The first helps other packages create
  problem objects and the second is a generic method that can be used to
  turn a problem object into a human readable description
  ([\#124](https://github.com/rstudio/tblcheck/issues/124)).

### Deprecated Functions

- [`tblcheck_grade()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/deprecated-methods.md)
  is now called
  [`problem_grade()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/problem_grade.md).
  The old function name will continue to work, but a deprecation warning
  will prompt you to update to
  [`problem_grade()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/problem_grade.md)
  ([\#124](https://github.com/rstudio/tblcheck/issues/124)).

## tblcheck 0.1.3

- Add `tolerance` argument to `vec_*_values()`
  ([\#111](https://github.com/rstudio/tblcheck/issues/111)).

## tblcheck 0.1.2

- Adds argument `ignore_class` to class checks (and passed by `table`,
  `vector`, and `column` checks), specifying class differences to ignore
  ([\#109](https://github.com/rstudio/tblcheck/issues/109)).
- Table checking now ignores the `grouped_df` class if
  `check_groups = FALSE`
  ([\#109](https://github.com/rstudio/tblcheck/issues/109)).
- Classes are now checked with
  [`setequal()`](https://rdrr.io/r/base/sets.html) instead of
  [`identical()`](https://rdrr.io/r/base/identical.html), so objects
  with the same classes in different orders will not trigger a `class`
  problem ([\#109](https://github.com/rstudio/tblcheck/issues/109)).
- Fixed a bug where a message would not be generated for a values
  problem where two vectors were different but were made up of the same
  unique values (e.g. `c(1, 2, 3)` and `c(2, 1, 3, 2)`)
  ([\#104](https://github.com/rstudio/tblcheck/issues/104)).

## tblcheck 0.1.1

- Fixed the messages for values problems originating in columns to
  mention the problematic column
  ([\#100](https://github.com/rstudio/tblcheck/issues/100)).
- A new vignette with exercise examples demonstrates the types of
  feedback
  [`grade_this_table()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/grade_this_table.md)
  and
  [`grade_this_vector()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/grade_this_vector.md)
  provide ([\#95](https://github.com/rstudio/tblcheck/issues/95)).
- [`vec_grade_values()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check_values.md)
  now treats `NA` values in the same position of the `object` and
  `expected` vectors as equal
  ([\#96](https://github.com/rstudio/tblcheck/issues/96)).
- [`grade_this_table()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/grade_this_table.md)
  was updated to include the `cols` and `check_column_order` arguments
  that were recently added to
  [`tbl_grade()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check.md)
  ([\#92](https://github.com/rstudio/tblcheck/issues/92)).

## tblcheck 0.1.0

- New package for inspecting data frames and vectors for grading with
  `gradethis`.
- Includes drop-in `gradethis`-style grading for tables and vectors that
  compare the student’s result with the exercies `-solution`:
  - [`grade_this_table()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/grade_this_table.md)
    for automated grading of **tables**
  - [`grade_this_vector()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/grade_this_vector.md)
    for automated grading of **vectors**
- Additional, lower-level functions come in two variants, a `grade`
  function that returns a `gradethis` grade and a `check` function that
  returns a list detailing the differences between actual and expected
  output.
- Includes three general purpose checking functions:
  1.  [`tbl_grade()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check.md)
      and
      [`tbl_check()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check.md)
      check that a tibble or data frame matches an expected output.
  2.  [`vec_grade()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check.md)
      and
      [`vec_check()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check.md)
      check that a vector marches an expected output.
  3.  [`tbl_grade_column()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_column.md)
      and
      [`tbl_check_column()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_column.md)
      check that a single column of a tibble or data frame matches an
      expected output (powered by
      [`vec_grade()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check.md)
      and
      [`vec_check()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check.md)).
- Includes six even more specific checking functions:
  1.  [`tbl_grade_class()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_class.md),
      [`tbl_check_class()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_class.md),
      [`vec_grade_class()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_class.md)
      and
      [`vec_check_class()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_class.md)
      check that the class of an object matches that of an expected
      output.
  2.  [`tbl_grade_dimensions()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_dimensions.md),
      [`tbl_check_dimensions()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_dimensions.md),
      [`vec_grade_dimensions()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_dimensions.md)
      and
      [`vec_check_dimensions()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_dimensions.md)
      check that the length, number of rows and columns, and number of
      dimensions of an object match that of an expected output.
  3.  [`tbl_grade_groups()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_groups.md)
      and
      [`tbl_check_groups()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_groups.md)
      check that the groups of a table (created by
      [`dplyr::group_by()`](https://dplyr.tidyverse.org/reference/group_by.html))
      match that of an expected output.
  4.  [`vec_grade_levels()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check_levels.md)
      and
      [`vec_check_levels()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check_levels.md)
      check that the levels of a factor match that of an expected
      output.
  5.  [`tbl_grade_names()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_names.md),
      [`tbl_check_names()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_names.md),
      [`vec_grade_names()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_names.md)
      and
      [`vec_check_names()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/tbl_check_names.md)
      check that the names of an object match that of an expected
      output.
  6.  [`vec_grade_values()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check_values.md)
      and
      [`vec_check_values()`](https://rstudio.github.io/tblcheck/v0.3.0/reference/vec_check_values.md)
      check that the values of a vector match that of an expected
      output.
- Also includes a number of functions for dealing with the `problem`
  output of `check` functions.
